# terrarium

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  SECURITY.md  TOOLS_AND_LICENSES.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/dump-context/: action.yml
.github/workflows/: ci.yaml  main.yaml  release.yaml  scan.yaml  scan.yml
docker/: Dockerfile.terrarium  Gemfile  pyproject.toml
docker/files/: gitconfig_skel  prompt.sh  setup.sh  starship.toml
docker/tests/: 00_core.bats  00_os.bats  01_common_dev_tools.bats  07_node_npm.bats  10_python.bats  20_infra.bats  30_cloud_platforms.bats  35_azure.bats  40_terraform.bats  60_k8s.bats  90_extras.bats  95_slimdown.bats
docker/tests/test_helper/: common.bash
docker/vendor-keys/: refresh-vendor-keys.sh  vendor-keys.env
docs/: attestation-research.md
examples/: README.md  devcontainer.json
examples/.devcontainer/: devcontainer.json
scripts/: build-test-local.ps1
terraform/docker/: Dockerfile.rocky8  Dockerfile.terrarium  Dockerfile.ubi8  Gemfile  Makefile  pyproject.toml  python_requirements
terraform/docker/files/: bashrc  envs.sh
terraform/docker/tests/: 00_core.bats  10_python.bats  20_infra.bats  30_aws.bats  35_azure.bats  40_terraform.bats  50_ruby_ecosystem.bats  60_k8s.bats  90_extras.bats  base-image-tests.bats
terraform/docker/tests/test_helper/: common.bash
terraform/docker/vendor-keys/: refresh-vendor-keys.sh  vendor-keys.env  vendor-keys.env  
tools/: prompt.sh
