[project]
name = "Terrarium"
version = "0.1.0"
description = "Development Container"
requires-python = ">=3.12"
dependencies = [
    "argparse~=1.4",
    "azure-cli~=2.75",
    "azure-cli-core~=2.75",
    "boto3~=1.39.17",
    "botocore~=1.39.17",
    "pipenv~=2024.0",
    "pre-commit~=4.2.0",
    "pycodestyle~=2.14.0",
    "python-hcl2~=2.0",
    "requests~=2.32.4",
    "simplejson~=3.19",
    "uv~=0.8.4",
    "virtualenv~=20.32.0",
]
